Nuevo diseño con logo central

--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
     <title>Vicente Aparicio - Portfolio</title>
 </head>
 <body>
+    <!--
     <header>
-        <img id="logo" src="./assets/iconos/logo.png" alt="Logotipo">
-        <nav id="navbar">
+         <div id="contenedorLogo">
+            <img id="logo" src="./assets/iconos/logo.png" alt="Logotipo">
+        </div>
+        <nav>
             <a class="nav-link" href="#">Home</a>
             <a class="nav-link" href="#">Portfolio</a>
             <a class="nav-link" href="#">Contacto</a>
-        </nav>
+        </nav> 
     </header>
-    <main></main>
-    <footer></footer>
+    -->
+    <div id="container">
+        <div id="portfolio" class="texto">portfolio</div>
+        <img id="logo" src="./assets/iconos/logo.png" alt="Logotipo">
+        <div id="contacto" class="texto">contacto</div>
+    </div>
+    
     <script src="./js/main.js"></script>
 </body>
 </html>
