Diseñando la landing page  por décima vez

--- a/index.html
+++ b/index.html
@@ -8,23 +8,17 @@
     <title>Vicente Aparicio - Portfolio</title>
 </head>
 <body>
-    <!--
-    <header>
-         <div id="contenedorLogo">
-            <img id="logo" src="./assets/iconos/logo.png" alt="Logotipo">
-        </div>
-        <nav>
-            <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="#">Portfolio</a>
-            <a class="nav-link" href="#">Contacto</a>
-        </nav> 
-    </header>
-    -->
-    <div id="container">
+    <!-- <div id="container">
         <div id="portfolio" class="texto">portfolio</div>
         <img id="logo" src="./assets/iconos/logo.png" alt="Logotipo">
         <div id="contacto" class="texto">contacto</div>
-    </div>
+    </div> -->
+    <nav>
+        <a id="home" class="links" href="#" target="_blank"></a>
+        <a id="contact" class="links" href="#" target="_blank"></a>
+        <a id="portfolio" class="links" href="#" target="_blank"></a>
+    </nav>
+    <main></main>
     
     <script src="./js/main.js"></script>
 </body>
