Creada sección about me, fijando el diseño en la estructura

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,15 @@
     <title>Vicente Aparicio - Portfolio</title>
 </head>
 <body>
-
+    <nav>
+        <a id="home" class="links" href="./index.html" target="_blank"></a>
+        <div id="cajon">
+            <a id="contact" class="links" href="./contact.html" target="_blank"></a>
+            <a id="portfolio" class="links" href="./portfolio.html" target="_blank"></a>
+        </div>
+    </nav>
+    <main></main>
+    
+    <script src="./js/main.js"></script>
 </body>
 </html>
