--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
 </head>
 <body>
     <nav>
-        <a id="home" class="links" href="./index.html" target="_blank"></a>
+        <div id="containerHome">
+            <a id="home" class="links" href="./index.html" target="_blank"></a>
+        </div>
         <div id="cajon">
             <a id="contact" class="links" href="./contact.html" target="_blank"></a>
             <a id="portfolio" class="links" href="./portfolio.html" target="_blank"></a>
         </div>
     </nav>
-    <main></main>
+    <main>
+        <div id="containerTitle">
+            <h2 id="aboutMe">/about me</h2>
+        </div>
+        <div id="containerBoxes">
+            <div class="aboutBoxes" id="left"></div>
+            <div class="aboutBoxes" id="center"></div>
+            <div class="aboutBoxes" id="right"></div>
+        </div>
+    </main>
     
     <script src="./js/main.js"></script>
 </body>
