--- a/index.html
+++ b/index.html
@@ -5,29 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,500;0,700;1,100;1,300;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,700;1,100;1,200;1,300;1,500;1,700&display=swap" rel="stylesheet">
     <title>Vicente Aparicio - Portfolio</title>
 </head>
 <body>
     <nav>
         <div id="containerHome">
-            <a id="home" class="links" href="./index.html" target="_blank"></a>
+            <a id="home" class="links font" href="./index.html" target="_blank"></a>
         </div>
         <div id="cajon">
-            <a id="contact" class="links" href="./contact.html" target="_blank"></a>
-            <a id="portfolio" class="links" href="./portfolio.html" target="_blank"></a>
+            <a id="contact" class="links font" href="./contact.html" target="_blank"></a>
+            <a id="portfolio" class="links font" href="./portfolio.html" target="_blank"></a>
         </div>
     </nav>
-    <main>
-        <div id="containerTitle">
-            <h2 id="aboutMe">/about me</h2>
+
+    <section id="containerAboutMe" class="secciones darker">
+        <div class="containerTitle">
+            <h2 id="aboutMe" class="sectionTitle darker font">/about me</h2>
+        </div>
+        <div id="containerText">
+            <div class="aboutText darker font" id="left">
+                <p>Siempre me he preguntado qué quería ser de mayor y creo que aún me lo pregunto con cada paso que doy.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="containerKnowledge" class="secciones lighter">
+        <div class="containerTitle">
+            <h2 id="stuff" class="sectionTitle lighter font">/stuff</h2>
         </div>
         <div id="containerBoxes">
-            <div class="aboutBoxes" id="left"></div>
-            <div class="aboutBoxes" id="center"></div>
-            <div class="aboutBoxes" id="right"></div>
+            <div class="aboutBoxes darker" id="left"></div>
+            <div class="aboutBoxes darker" id="center"></div>
+            <div class="aboutBoxes darker" id="right"></div>
         </div>
-    </main>
+    </section>
     
     <script src="./js/main.js"></script>
 </body>
