--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,700;1,100;1,200;1,300;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Vicente Aparicio - Portfolio</title>
 </head>
 <body>
     <nav>
         <div id="containerHome">
             <a id="home" class="links font" href="./index.html" target="_blank"></a>
+            <a id="home2" class="links font" href="./index.html" target="_blank"></a>
         </div>
         <div id="cajon">
             <a id="contact" class="links font" href="./contact.html" target="_blank"></a>
@@ -24,8 +26,8 @@
             <h2 id="aboutMe" class="sectionTitle darker font">/about me</h2>
         </div>
         <div id="containerText">
-            <div class="aboutText darker font" id="left">
-                <p>Siempre me he preguntado qué quería ser de mayor y creo que aún me lo pregunto con cada paso que doy.</p>
+            <div id="aboutText" class="darker font" id="left">
+                <p>Siempre<br> me he preguntado qué quería ser de mayor y creo que aún me lo pregunto con cada paso que doy.</p>
             </div>
         </div>
     </section>
@@ -36,9 +38,15 @@
             <h2 id="stuff" class="sectionTitle lighter font">/stuff</h2>
         </div>
         <div id="containerBoxes">
-            <div class="aboutBoxes darker" id="left"></div>
-            <div class="aboutBoxes darker" id="center"></div>
-            <div class="aboutBoxes darker" id="right"></div>
+            <div class="boxes darker" id="left">
+                <div class="contenidoBoxes"></div>
+            </div>
+            <div class="boxes darker" id="center">
+                <div class="contenidoBoxes"></div>
+            </div>
+            <div class="boxes darker" id="right">
+                <div class="contenidoBoxes"></div>
+            </div>
         </div>
     </section>
     
