Incorporados iconos y animaciones

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,700;1,100;1,200;1,300;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
     <title>Vicente Aparicio - Portfolio</title>
 </head>
 <body>
@@ -19,6 +19,10 @@
             <a id="contact" class="links font" href="./contact.html" target="_blank"></a>
             <a id="portfolio" class="links font" href="./portfolio.html" target="_blank"></a>
         </div>
+        <div id="redes">
+            <i id="arrowDown"class="fa fa-arrow-down colorIco" aria-hidden="true"></i>
+        </div>
+        
     </nav>
 
     <section id="containerAboutMe" class="secciones darker">
@@ -38,14 +42,14 @@
             <h2 id="stuff" class="sectionTitle lighter font">/stuff</h2>
         </div>
         <div id="containerBoxes">
-            <div class="boxes darker" id="left">
-                <div class="contenidoBoxes"></div>
+            <div class="boxes" id="left">
+                <div class="contenidoBoxes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur nesciunt sit dolor perspiciatis nostrum, tempore delectus, ullam quidem accusantium, commodi laudantium? Ab consequuntur deserunt quia, perferendis aperiam rem voluptatibus magnam voluptas recusandae repudiandae numquam repellat. Excepturi harum impedit asperiores assumenda voluptatem minus, cum ea voluptates quidem ad magni recusandae? Id itaque est at neque ipsum laboriosam voluptatem dicta repellendus quibusdam deleniti, fugiat aspernatur repudiandae corrupti sequi sunt quis. Sunt, minus ipsam neque voluptatem perspiciatis possimus sint necessitatibus optio delectus sed hic assumenda dicta consequuntur cumque suscipit reprehenderit voluptatum aspernatur. Aspernatur quis facere quasi rerum, totam accusamus eum molestiae laudantium tempora.</div>
             </div>
-            <div class="boxes darker" id="center">
-                <div class="contenidoBoxes"></div>
+            <div class="boxes" id="center">
+                <div class="contenidoBoxes">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione similique natus hic ipsum aspernatur quidem aut qui ab nulla, ad esse, quae obcaecati nobis iusto, odio inventore libero dignissimos? Ex.</div>
             </div>
-            <div class="boxes darker" id="right">
-                <div class="contenidoBoxes"></div>
+            <div class="boxes" id="right">
+                <div class="contenidoBoxes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur inventore accusamus maxime illum minima asperiores possimus, in neque at? Asperiores totam ipsa accusamus repellendus obcaecati culpa natus temporibus illum blanditiis consequuntur? Laboriosam cum libero consequatur, debitis ullam eaque reprehenderit possimus asperiores. Omnis dolore tenetur nisi aliquid nobis nam, possimus rem, aspernatur vero, enim soluta earum suscipit vel a atque.</div>
             </div>
         </div>
     </section>
