--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="containerTitle">
             <h2 id="aboutMe" class="sectionTitle darker font">/about me</h2>
         </div>
-        <div id="containerText">
-            <div id="aboutText" class="darker font" id="left">
-                <p>Siempre<br> me he preguntado qué quería ser de mayor y creo que aún me lo pregunto con cada paso que doy.</p>
-            </div>
+        <div id="containerText" class="darker font">
+            
+                Siempre<br> me he preguntado qué quería ser de mayor y creo que aún me lo pregunto con cada paso que doy.
+        
         </div>
     </section>
 
@@ -43,13 +43,26 @@
         </div>
         <div id="containerBoxes">
             <div class="boxes" id="left">
-                <div class="contenidoBoxes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur nesciunt sit dolor perspiciatis nostrum, tempore delectus, ullam quidem accusantium, commodi laudantium? Ab consequuntur deserunt quia, perferendis aperiam rem voluptatibus magnam voluptas recusandae repudiandae numquam repellat. Excepturi harum impedit asperiores assumenda voluptatem minus, cum ea voluptates quidem ad magni recusandae? Id itaque est at neque ipsum laboriosam voluptatem dicta repellendus quibusdam deleniti, fugiat aspernatur repudiandae corrupti sequi sunt quis. Sunt, minus ipsam neque voluptatem perspiciatis possimus sint necessitatibus optio delectus sed hic assumenda dicta consequuntur cumque suscipit reprehenderit voluptatum aspernatur. Aspernatur quis facere quasi rerum, totam accusamus eum molestiae laudantium tempora.</div>
+                <div class="tituloBoxes font">Graphic Designer</div>
+                <div class="contenidoBoxes font">
+                    Estudié diseño gráfico en la Escuela Superior de Arte y Diseño de Valencia. Durante mi tiempo allí descubrí que lo que más me haría aprender sobre este campo es el trabajo y la búsqueda personal de todo aquello cuanto necesitara saber. </br></br>
+
+                    El diseño en mi corazón está ligado a la eficiencia de la comunicación y en la funcionalidad del mensaje. La mecánica de las emociones ligada a los colores, las formas y a la estructura representativa de la misma son partes fundamentales de un buen diseño.
+                </div>
             </div>
             <div class="boxes" id="center">
-                <div class="contenidoBoxes">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione similique natus hic ipsum aspernatur quidem aut qui ab nulla, ad esse, quae obcaecati nobis iusto, odio inventore libero dignissimos? Ex.</div>
+                <div class="tituloBoxes font">Full Stack Developer</div>
+                <div class="contenidoBoxes font">
+                    Actualmente en desarrollo de una de las piezas fundamentales que todo diseñador web debería tener en su conocimiento. El trabajo con los lenguajes de estructuras, estilos y funcionalidades que el desarrollo web necesita para su construcción.</br></br>
+                    El trabajo del diseñador gráfico se ve limitado por el desconocimiento de las herramientas reales con las cuales se construye una página web. Al tener un conocimiento más completo el diseñador es capaz de llevar a la realidad sus propios diseños. De esta manera el propio diseño web puede evolucionar a través del mismo diseñador y no a través de un desarrollador cuya visión pueda ser distinta.
+                </div>
             </div>
             <div class="boxes" id="right">
-                <div class="contenidoBoxes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur inventore accusamus maxime illum minima asperiores possimus, in neque at? Asperiores totam ipsa accusamus repellendus obcaecati culpa natus temporibus illum blanditiis consequuntur? Laboriosam cum libero consequatur, debitis ullam eaque reprehenderit possimus asperiores. Omnis dolore tenetur nisi aliquid nobis nam, possimus rem, aspernatur vero, enim soluta earum suscipit vel a atque.</div>
+                <div class="tituloBoxes font">3D Designer</div>
+                <div class="contenidoBoxes font">
+                    La implementación 3D es el futuro de muchas de los desarrollos actuales y modernos. La gran potencia de los dispositivos móviles así como de unos motores gráficos que mes a mes mejoran su rendimiento y eficiencia de recursos hacen del 3D el nuevo mundo a explorar en estos campos. </br></br>
+                    Poco a poco se empiezan a ver cada vez más trabajos que mezclan el diseño web y el 3D otorgando de una gran sensación de viveza donde antes sólo teníamos el mundo bidimensional. Esta barrera que poco a poco se nos va abriendo nos permitirá trabajar en diseños inmersivos y apasionantes.
+                </div>
             </div>
         </div>
     </section>
