--- a/index.html
+++ b/index.html
@@ -41,44 +41,85 @@
     </section>
 
 
-    <section id="containerKnowledge" class="secciones cLight">
-        <i id="arrowKnowledge" class="fa fa-arrow-down icos" aria-hidden="true"></i>
+    <section id="containerKnowledge" class="secciones cLight font">
         <div class="containerTitle">
-            <h2 class="sectionTitle font">/knowledge</h2>
+            <h2 class="sectionTitle">/knowledge</h2>
         </div>
         <div class="containerBoxes">
-            <div class="boxes" id="left">
-                <div class="tituloBoxes font">Graphic Designer</div>
-                <div class="contenidoBoxes font">
+            <div class="boxes">
+                <div class="tituloBoxes">Graphic Designer</div>
+                <div class="contenidoBoxes">
                     Estudié diseño gráfico en la Escuela Superior de Arte y Diseño de Valencia. Durante mi tiempo allí descubrí que lo que más me haría aprender sobre este campo es el trabajo y la búsqueda personal de todo aquello cuanto necesitara saber. </br></br>
 
                     El diseño en mi corazón está ligado a la eficiencia de la comunicación y en la funcionalidad del mensaje. La mecánica de las emociones ligada a los colores, las formas y a la estructura representativa de la misma son partes fundamentales de un buen diseño.
                 </div>
             </div>
-            <div class="boxes" id="center">
-                <div class="tituloBoxes font">Full Stack Developer</div>
-                <div class="contenidoBoxes font">
+            <div class="boxes center">
+                <div class="tituloBoxes">Full Stack Developer</div>
+                <div class="contenidoBoxes">
                     Actualmente en desarrollo de una de las piezas fundamentales que todo diseñador web debería tener en su conocimiento. El trabajo con los lenguajes de estructuras, estilos y funcionalidades que el desarrollo web necesita para su construcción.</br></br>
                     El trabajo del diseñador gráfico se ve limitado por el desconocimiento de las herramientas reales con las cuales se construye una página web. Al tener un conocimiento más completo el diseñador es capaz de llevar a la realidad sus propios diseños. De esta manera el propio diseño web puede evolucionar a través del mismo diseñador y no a través de un desarrollador cuya visión pueda ser distinta.
                 </div>
             </div>
-            <div class="boxes" id="right">
-                <div class="tituloBoxes font">3D Designer</div>
-                <div class="contenidoBoxes font">
+            <div class="boxes">
+                <div class="tituloBoxes">3D Designer</div>
+                <div class="contenidoBoxes">
                     La implementación 3D es el futuro de muchas de los desarrollos actuales y modernos. La gran potencia de los dispositivos móviles así como de unos motores gráficos que mes a mes mejoran su rendimiento y eficiencia de recursos hacen del 3D el nuevo mundo a explorar en estos campos. </br></br>
                     Poco a poco se empiezan a ver cada vez más trabajos que mezclan el diseño web y el 3D otorgando de una gran sensación de viveza donde antes sólo teníamos el mundo bidimensional. Esta barrera que poco a poco se nos va abriendo nos permitirá trabajar en diseños inmersivos y apasionantes.
                 </div>
             </div>
         </div>
     </section>
-    <section id="teconolgia" class="secciones bgLight">
+
+    <section id="pic" class="secciones bgLight cDark">
+        <img src="./img/nine.jpg" alt="Fotografía de Vicente Aparicio">
+    </section>
+
+    <section id="tecnologia" class="secciones bgDark cDark font">
         <div class="containerTitle">
-            <h2 class="sectionTitle cDark font">/tech</h2>
+            <h2 class="sectionTitle cLight">/tecnologías</h2>
         </div>
         <div class="containerBoxes">
-            <div class="boxes">
-                <div class="tituloBoxes"></div>
-                <div class="contenidoBoxes"></div>
+            <div class="boxes inBoxes bgLight">
+                <i class="fab fa-html5 icosBig"></i>
+                <div class="tituloBoxes">HTML5</div>
+                <div class="contenidoBoxes">
+                    Estudié diseño gráfico en la Escuela Superior de Arte y Diseño de Valencia. Durante mi tiempo allí descubrí que lo que más me haría aprender sobre este campo es el trabajo y la búsqueda personal de todo aquello cuanto necesitara saber. </br></br>
+
+                    El diseño en mi corazón está ligado a la eficiencia de la comunicación y en la funcionalidad del mensaje. La mecánica de las emociones ligada a los colores, las formas y a la estructura representativa de la misma son partes fundamentales de un buen diseño.
+                </div>
+            </div>
+            <div class="boxes inBoxes bgLight center">
+                <i class="fab fa-css3-alt icosBig"></i>
+                <div class="tituloBoxes">CSS3</div>
+                <div class="contenidoBoxes">
+                    Actualmente en desarrollo de una de las piezas fundamentales que todo diseñador web debería tener en su conocimiento. El trabajo con los lenguajes de estructuras, estilos y funcionalidades que el desarrollo web necesita para su construcción.</br></br>
+                    El trabajo del diseñador gráfico se ve limitado por el desconocimiento de las herramientas reales con las cuales se construye una página web. Al tener un conocimiento más completo el diseñador es capaz de llevar a la realidad sus propios diseños. De esta manera el propio diseño web puede evolucionar a través del mismo diseñador y no a través de un desarrollador cuya visión pueda ser distinta.
+                </div>
+            </div>
+            <div class="boxes inBoxes bgLight" id="right">
+                <i class="fab fa-js-square icosBig"></i>
+                <div class="tituloBoxes">JavaScript</div>
+                <div class="contenidoBoxes">
+                    La implementación 3D es el futuro de muchas de los desarrollos actuales y modernos. La gran potencia de los dispositivos móviles así como de unos motores gráficos que mes a mes mejoran su rendimiento y eficiencia de recursos hacen del 3D el nuevo mundo a explorar en estos campos. </br></br>
+                    Poco a poco se empiezan a ver cada vez más trabajos que mezclan el diseño web y el 3D otorgando de una gran sensación de viveza donde antes sólo teníamos el mundo bidimensional. Esta barrera que poco a poco se nos va abriendo nos permitirá trabajar en diseños inmersivos y apasionantes.
+                </div>
+            </div>
+            <div class="boxes inBoxes bgLight center">
+                <i class="fab fa-react icosBig"></i>
+                <div class="tituloBoxes">React</div>
+                <div class="contenidoBoxes">
+                    La implementación 3D es el futuro de muchas de los desarrollos actuales y modernos. La gran potencia de los dispositivos móviles así como de unos motores gráficos que mes a mes mejoran su rendimiento y eficiencia de recursos hacen del 3D el nuevo mundo a explorar en estos campos. </br></br>
+                    Poco a poco se empiezan a ver cada vez más trabajos que mezclan el diseño web y el 3D otorgando de una gran sensación de viveza donde antes sólo teníamos el mundo bidimensional. Esta barrera que poco a poco se nos va abriendo nos permitirá trabajar en diseños inmersivos y apasionantes.
+                </div>
+            </div>
+            <div class="boxes inBoxes bgLight">
+                <i class="fab fa-php icosBig"></i>
+                <div class="tituloBoxes">PHP</div>
+                <div class="contenidoBoxes">
+                    La implementación 3D es el futuro de muchas de los desarrollos actuales y modernos. La gran potencia de los dispositivos móviles así como de unos motores gráficos que mes a mes mejoran su rendimiento y eficiencia de recursos hacen del 3D el nuevo mundo a explorar en estos campos. </br></br>
+                    Poco a poco se empiezan a ver cada vez más trabajos que mezclan el diseño web y el 3D otorgando de una gran sensación de viveza donde antes sólo teníamos el mundo bidimensional. Esta barrera que poco a poco se nos va abriendo nos permitirá trabajar en diseños inmersivos y apasionantes.
+                </div>
             </div>
         </div>
     </section>
