Rediseño del navegador con la incorporación de los iconos de redes

--- a/index.html
+++ b/index.html
@@ -11,17 +11,35 @@
     <title>Vicente Aparicio - Portfolio</title>
 </head>
 <body>
-    <header>
-        <a href="https://github.com/VicenteAparicio" target="_blank"><i id="github" class="fab fa-github cLight"></i></a>
-    </header>
+    <div id="navegador">
+        <a href="https://github.com/VicenteAparicio" target="_blank"><i id="github" class="fab fa-github cLight icosNav"></i></a>
+        <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></i></a>
+        <!-- <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-reply cLight icosNav"></i></i></a> -->
+        <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-briefcase cLight icosNav"></i></i></a>
+    </div>
     <nav>
         <div id="containerHome">
             <a id="home" class="links font" href="./index.html" target="_self">vicente</a>
             <a id="home2" class="links font" href="./index.html" target="_self">aparicio</a>
         </div>
-        <div id="cajon">
+        <!-- <div id="cajon">
             <a id="contact" class="links font" href="./contact.html" target="_self">contacto</a>
             <a id="portfolio" class="links font" href="./portfolio.html" target="_self">portfolio</a>
+        </div> -->
+        <div id="navegador2">
+            <div class="icoBox">
+                <a href="https://github.com/VicenteAparicio" target="_blank"><i id="github" class="fab fa-github cLight icosNav"></i></a>
+                <span class="hide font cLight">github</span>
+            </div>
+            <div class="icoBox">
+                <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></i></a>
+                <span class="hide font cLight">contact</span>
+            </div>
+            <!-- <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-reply cLight icosNav"></i></i></a> -->
+            <div class="icoBox">
+                <a href="./portfolio.html" target="_blank"><i id="portfolio" class="fas fa-briefcase cLight icosNav"></i></i></a>
+                <span class="hide font cLight">portfolio</span>
+            </div>
         </div>
         <div class="flechas">
             <i id="arrowDown"class="fa fa-arrow-down icos cLight" aria-hidden="true"></i>
@@ -32,11 +50,8 @@
         <div class="containerTitle">
             <h2 id="aboutMe" class="sectionTitle  font">/about me</h2>
         </div>
-        <div id="containerText" class=" font">
+        <div id="containerText" class="texto font">
                 Siempre<br> me he preguntado qué quería ser de mayor y creo que aún me lo pregunto con cada paso que doy.
-        </div>
-        <div class="flechas">
-            <i id="levelDown"class="fa fa-arrow-down icos" aria-hidden="true"></i>
         </div>
     </section>
 
@@ -54,7 +69,7 @@
                     El diseño en mi corazón está ligado a la eficiencia de la comunicación y en la funcionalidad del mensaje. La mecánica de las emociones ligada a los colores, las formas y a la estructura representativa de la misma son partes fundamentales de un buen diseño.
                 </div>
             </div>
-            <div class="boxes center">
+            <div class="boxes">
                 <div class="tituloBoxes">Full Stack Developer</div>
                 <div class="contenidoBoxes">
                     Actualmente en desarrollo de una de las piezas fundamentales que todo diseñador web debería tener en su conocimiento. El trabajo con los lenguajes de estructuras, estilos y funcionalidades que el desarrollo web necesita para su construcción.</br></br>
@@ -89,7 +104,7 @@
                     El diseño en mi corazón está ligado a la eficiencia de la comunicación y en la funcionalidad del mensaje. La mecánica de las emociones ligada a los colores, las formas y a la estructura representativa de la misma son partes fundamentales de un buen diseño.
                 </div>
             </div>
-            <div class="boxes inBoxes bgLight center">
+            <div class="boxes inBoxes bgLight">
                 <i class="fab fa-css3-alt icosBig"></i>
                 <div class="tituloBoxes">CSS3</div>
                 <div class="contenidoBoxes">
@@ -105,7 +120,7 @@
                     Poco a poco se empiezan a ver cada vez más trabajos que mezclan el diseño web y el 3D otorgando de una gran sensación de viveza donde antes sólo teníamos el mundo bidimensional. Esta barrera que poco a poco se nos va abriendo nos permitirá trabajar en diseños inmersivos y apasionantes.
                 </div>
             </div>
-            <div class="boxes inBoxes bgLight center">
+            <div class="boxes inBoxes bgLight">
                 <i class="fab fa-react icosBig"></i>
                 <div class="tituloBoxes">React</div>
                 <div class="contenidoBoxes">
