--- a/portfolio.html
+++ b/portfolio.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,500;0,700;1,100;1,300;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,700;1,100;1,200;1,300;1,500;1,700&display=swap" rel="stylesheet">    
     <title>Vicente Aparicio - Portfolio</title>
 </head>
 <body>
-    <nav>
-        <a id="home" class="links" href="./index.html" target="_blank"></a>
-        <div id="cajon">
-            <a id="contact" class="links" href="./contact.html" target="_blank"></a>
-            <a id="portfolio" class="links" href="./portfolio.html" target="_blank"></a>
-        </div>
-    </nav>
+    <div id="navegadorC">
+        <a href="https://github.com/VicenteAparicio" target="_blank"><i id="github" class="fab fa-github cLight icosNav"></i></a>
+        <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></a>
+        <a href="./index.html" target="_blank"><i id="index" class="fas fa-home cLight icosNav"></i></a>
+        <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-briefcase cLight icosNav"></i>/a>
+    </div>
     <main></main>
     
+    <script src="https://kit.fontawesome.com/ac47b89bc3.js" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
