--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,700;1,100;1,200;1,300;1,500;1,700&display=swap" rel="stylesheet">
-    <!--<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">-->
-    
+    <link href="./css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,700;1,100;1,200;1,300;1,500;1,700&display=swap" rel="stylesheet">    
     <title>Vicente Aparicio - Portfolio</title>
 </head>
 <body>
     <div id="navegador">
         <a href="https://github.com/VicenteAparicio" target="_blank"><i id="github" class="fab fa-github cLight icosNav"></i></a>
-        <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></i></a>
-        <!-- <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-reply cLight icosNav"></i></i></a> -->
-        <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-briefcase cLight icosNav"></i></i></a>
+        <a href="./contact.html" target="_self"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></a>
+        <!-- <a href="./index.html" target="_blank"><i id="index" class="fas fa-home cLight icosNav"></i></a> -->
+        <a href="./portfolio.html" target="_self"><i id="portfolio" class="fas fa-briefcase cLight icosNav"></i></a>
     </div>
     <nav>
         <div id="containerHome">
@@ -35,9 +33,9 @@
                 <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></i></a>
                 <span class="hide font cLight">contact</span>
             </div>
-            <!-- <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-reply cLight icosNav"></i></i></a> -->
+            <!-- <a href="./index.html" target="_blank"><i id="index" class="fas fa-home cLight icosNav"></i></a> -->
             <div class="icoBox">
-                <a href="./portfolio.html" target="_blank"><i id="portfolio" class="fas fa-briefcase cLight icosNav"></i></i></a>
+                <a href="./portfolio.html" target="_blank"><i id="portfolio" class="fas fa-briefcase cLight icosNav"></i></a>
                 <span class="hide font cLight">portfolio</span>
             </div>
         </div>
