--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,21 @@
 </head>
 <body>
     <div id="navegadorC">
-        <a href="https://github.com/VicenteAparicio" target="_blank"><i id="github" class="fab fa-github cLight icosNav"></i></a>
-        <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></a>
-        <a href="./index.html" target="_blank"><i id="index" class="fas fa-home cLight icosNav"></i></a>
-        <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-briefcase cLight icosNav"></i>/a>
+        <div class="icoBox">
+            <a href="https://github.com/VicenteAparicio" target="_blank"><i id="github" class="fab fa-github cLight icosNav"></i></a>
+            <span class="hide font cLight">github</span>
+        </div>
+        <div class="icoBox">
+            <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></i></a>
+            <span class="hide font cLight">contact</span>
+        </div>
+        <div class="icoBox">
+            <a href="./index.html" target="_blank"><i id="index" class="fas fa-home cLight icosNav"></i></a>
+        </div>
+        <div class="icoBox">
+            <a href="./portfolio.html" target="_blank"><i id="portfolio" class="fas fa-briefcase cLight icosNav"></i></a>
+            <span class="hide font cLight">portfolio</span>
+        </div>
     </div>
     <main></main>
     
