--- a/index.html
+++ b/index.html
@@ -17,25 +17,23 @@
     </div>
     <nav>
         <div id="containerHome">
-            <a id="home" class="links font" href="./index.html" target="_self">vicente</a>
-            <a id="home2" class="links font" href="./index.html" target="_self">aparicio</a>
+            <span class="nameTitle nameTop font cLight" class="font">vicente</span>
+            <span class="nameTitle nameBottom font cLight" class="font">aparicio</span>
         </div>
-        <!-- <div id="cajon">
-            <a id="contact" class="links font" href="./contact.html" target="_self">contacto</a>
-            <a id="portfolio" class="links font" href="./portfolio.html" target="_self">portfolio</a>
-        </div> -->
         <div id="navegador2">
             <div class="icoBox">
                 <a href="https://github.com/VicenteAparicio" target="_blank"><i id="github" class="fab fa-github cLight icosNav"></i></a>
                 <span class="hide font cLight">github</span>
             </div>
             <div class="icoBox">
-                <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></i></a>
+                <a href="./contact.html" target="_self"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></a>
                 <span class="hide font cLight">contact</span>
             </div>
-            <!-- <a href="./index.html" target="_blank"><i id="index" class="fas fa-home cLight icosNav"></i></a> -->
+            <!--<div class="icoBox">
+                <a href="./index.html" target="_blank"><i id="index" class="fas fa-home cLight icosNav"></i></a>
+            </div>-->
             <div class="icoBox">
-                <a href="./portfolio.html" target="_blank"><i id="portfolio" class="fas fa-briefcase cLight icosNav"></i></a>
+                <a href="./portfolio.html" target="_self"><i id="portfolio" class="fas fa-briefcase cLight icosNav"></i></a>
                 <span class="hide font cLight">portfolio</span>
             </div>
         </div>
