--- a/portfolio.html
+++ b/portfolio.html
@@ -15,16 +15,17 @@
             <span class="hide font cLight">github</span>
         </div>
         <div class="icoBox">
-            <a href="./contact.html" target="_blank"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></i></a>
+            <a href="./index.html" target="_self"><i id="index" class="fas fa-home cLight icosNav"></i></a>
+        </div>
+        <div class="icoBox">
+            <a href="./contact.html" target="_self"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></a>
             <span class="hide font cLight">contact</span>
         </div>
-        <div class="icoBox">
-            <a href="./index.html" target="_blank"><i id="index" class="fas fa-home cLight icosNav"></i></a>
-        </div>
-        <div class="icoBox">
+
+        <!-- <div class="icoBox">
             <a href="./portfolio.html" target="_blank"><i id="portfolio" class="fas fa-briefcase cLight icosNav"></i></a>
             <span class="hide font cLight">portfolio</span>
-        </div>
+        </div> -->
     </div>
     <main></main>
     
