Añadida funcionalidad a través de javascript para about me

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <section id="containerAboutMe" class="secciones bgLight cDark">
         <div class="containerTitle">
             <h2 id="aboutMe" class="sectionTitle  font">/about me</h2>
+            <i class="fas fa-book-open cDark icoOpen" onclick="descifrar()"></i>
         </div>
         <div id="containerText" class="texto font">
                 Siempre<br> me he preguntado qué quería ser de mayor y creo que aún me lo pregunto con cada paso que doy.
