Probando funcionalidad envío de correo

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <div id="mainContainer" class="font cLight">
             <span class="titlePage">/contact me</span>
             <div id="formaForm" class="formTexto">
-				<form id="form" method="post" id="i-recaptcha">
+				<form action="contact.php" id="form" method="post">
                     <label for="nombre">name</label>
 					<input class="data bgDark" type="text" name="nombre" placeholder="" required=""/>
 					<label for="email">email</label>
@@ -43,7 +43,6 @@
 					<input class="bgLight" id="submit" type="submit" name="submit" value="Enviar"/>			
 				</form>	
 			</div>
-
         </div>
     </main>
     
