--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="icoBox">
                 <a href="./contact.html" target="_self"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></a>
-                <span class="hide font cLight">contact</span>
+                <span class="hide font cLight">contacto</span>
             </div>
             <!--<div class="icoBox">
                 <a href="./index.html" target="_blank"><i id="index" class="fas fa-home cLight icosNav"></i></a>
@@ -37,15 +37,11 @@
                 <span class="hide font cLight">portfolio</span>
             </div>
         </div>
-        <div class="flechas">
-            <i id="arrowDown"class="fa fa-arrow-down icos cLight" aria-hidden="true"></i>
-        </div>
     </nav>
 
     <section id="containerAboutMe" class="secciones bgLight cDark">
         <div class="containerTitle">
-            <h2 id="aboutMe" class="sectionTitle  font">/about me</h2>
-            <i class="fas fa-book-open cDark icoOpen" onclick="descifrar()"></i>
+            <h2 id="aboutMe" class="sectionTitle  font" onclick="descifrar()">/sobre mí</h2>
         </div>
         <div id="containerText" class="texto font">
                 Siempre<br> me he preguntado qué quería ser de mayor y creo que aún me lo pregunto con cada paso que doy.
@@ -55,11 +51,11 @@
 
     <section id="containerKnowledge" class="secciones cLight font">
         <div class="containerTitle">
-            <h2 class="sectionTitle">/knowledge</h2>
+            <h2 class="sectionTitle">/conocimientos</h2>
         </div>
         <div class="containerBoxes">
             <div class="boxes">
-                <div class="tituloBoxes">Graphic Designer</div>
+                <div class="tituloBoxes">diseño gráfico</div>
                 <div class="contenidoBoxes">
                     Estudié diseño gráfico en la Escuela Superior de Arte y Diseño de Valencia. Durante mi tiempo allí descubrí que lo que más me haría aprender sobre este campo es el trabajo y la búsqueda personal de todo aquello cuanto necesitara saber. </br></br>
 
@@ -67,14 +63,14 @@
                 </div>
             </div>
             <div class="boxes">
-                <div class="tituloBoxes">Full Stack Developer</div>
+                <div class="tituloBoxes">full stack developer</div>
                 <div class="contenidoBoxes">
                     Actualmente en desarrollo de una de las piezas fundamentales que todo diseñador web debería tener en su conocimiento. El trabajo con los lenguajes de estructuras, estilos y funcionalidades que el desarrollo web necesita para su construcción.</br></br>
                     El trabajo del diseñador gráfico se ve limitado por el desconocimiento de las herramientas reales con las cuales se construye una página web. Al tener un conocimiento más completo el diseñador es capaz de llevar a la realidad sus propios diseños. De esta manera el propio diseño web puede evolucionar a través del mismo diseñador y no a través de un desarrollador cuya visión pueda ser distinta.
                 </div>
             </div>
             <div class="boxes">
-                <div class="tituloBoxes">3D Designer</div>
+                <div class="tituloBoxes">Diseño 3D</div>
                 <div class="contenidoBoxes">
                     La implementación 3D es el futuro de muchas de los desarrollos actuales y modernos. La gran potencia de los dispositivos móviles así como de unos motores gráficos que mes a mes mejoran su rendimiento y eficiencia de recursos hacen del 3D el nuevo mundo a explorar en estos campos. </br></br>
                     Poco a poco se empiezan a ver cada vez más trabajos que mezclan el diseño web y el 3D otorgando de una gran sensación de viveza donde antes sólo teníamos el mundo bidimensional. Esta barrera que poco a poco se nos va abriendo nos permitirá trabajar en diseños inmersivos y apasionantes.
@@ -88,48 +84,27 @@
     </section>
 
     <section id="tecnologia" class="secciones bgDark cDark font">
-        <!-- <div class="containerTitle">
-            <h2 class="sectionTitle cLight">/tecnologías</h2>
-        </div> -->
         <div class="containerBoxes">
             <div class="boxes inBoxes bgLight">
                 <i class="fab fa-html5 icosBig"></i>
-                <div class="tituloBoxes">HTML5</div>
-                <!-- <div class="contenidoBoxes">
-                    Estudié diseño gráfico en la Escuela Superior de Arte y Diseño de Valencia. Durante mi tiempo allí descubrí que lo que más me haría aprender sobre este campo es el trabajo y la búsqueda personal de todo aquello cuanto necesitara saber. </br></br>
+                <div class="descBoxes">HTML5</div>
 
-                    El diseño en mi corazón está ligado a la eficiencia de la comunicación y en la funcionalidad del mensaje. La mecánica de las emociones ligada a los colores, las formas y a la estructura representativa de la misma son partes fundamentales de un buen diseño.
-                </div> -->
             </div>
             <div class="boxes inBoxes bgLight">
                 <i class="fab fa-css3-alt icosBig"></i>
-                <div class="tituloBoxes">CSS3</div>
-                <!-- <div class="contenidoBoxes">
-                    Un buen diseñador gráfico no debería dejar pasar la oportunidad de trabajar con el lenguaje de estilos de CSS3. Las posibilidades que ofrece son altísimas y en la mayoría de casos no se aprovecha todo su potencial. Actualmente la mayoría de las funcionalidades y animaciones se pueden trabajar en JavaScript pero no viene nada mal tener conocimientos de CSS3 avanzado para, en ocasiones, resolver de forma mucho más limpia y rápida ciertos aspectos de tu página web. 
-                </div> -->
+                <div class="descBoxes">CSS3</div>
             </div>
             <div class="boxes inBoxes bgLight" id="right">
                 <i class="fab fa-js-square icosBig"></i>
-                <div class="tituloBoxes">JavaScript</div>
-                <!-- <div class="contenidoBoxes">
-                    El lenguaje que sirve para absolutamente todo. El motor funcional de la estructura de la página web que te sirve también para trabajar todo el front-end funcional y crear una verdadera web interactiva donde el usuario sienta la respuesta de un diseño inteligente. 
-                </div> -->
+                <div class="descBoxes">JavaScript</div>
             </div>
             <div class="boxes inBoxes bgLight">
                 <i class="fab fa-react icosBig"></i>
-                <div class="tituloBoxes">React</div>
-                <!-- <div class="contenidoBoxes">
-                    La implementación 3D es el futuro de muchas de los desarrollos actuales y modernos. La gran potencia de los dispositivos móviles así como de unos motores gráficos que mes a mes mejoran su rendimiento y eficiencia de recursos hacen del 3D el nuevo mundo a explorar en estos campos. </br></br>
-                    Poco a poco se empiezan a ver cada vez más trabajos que mezclan el diseño web y el 3D otorgando de una gran sensación de viveza donde antes sólo teníamos el mundo bidimensional. Esta barrera que poco a poco se nos va abriendo nos permitirá trabajar en diseños inmersivos y apasionantes.
-                </div> -->
+                <div class="descBoxes">React</div>
             </div>
             <div class="boxes inBoxes bgLight">
                 <i class="fab fa-php icosBig"></i>
-                <div class="tituloBoxes">PHP</div>
-                <!-- <div class="contenidoBoxes">
-                    La implementación 3D es el futuro de muchas de los desarrollos actuales y modernos. La gran potencia de los dispositivos móviles así como de unos motores gráficos que mes a mes mejoran su rendimiento y eficiencia de recursos hacen del 3D el nuevo mundo a explorar en estos campos. </br></br>
-                    Poco a poco se empiezan a ver cada vez más trabajos que mezclan el diseño web y el 3D otorgando de una gran sensación de viveza donde antes sólo teníamos el mundo bidimensional. Esta barrera que poco a poco se nos va abriendo nos permitirá trabajar en diseños inmersivos y apasionantes.
-                </div> -->
+                <div class="descBoxes">PHP</div>
             </div>
         </div>
     </section>
