Añadida nueva sección en portfolio, falta trabajar el diseño

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
         </div>
         <div class="icoBox">
             <a href="./index.html" target="_self"><i id="index" class="fas fa-home cLight icosNav"></i></a>
+            <span class="hide font cLight">home</span>
         </div>
         <div class="icoBox">
             <a href="./contact.html" target="_self"><i id="contacto" class="fas fa-envelope cLight icosNav"></i></a>
@@ -27,7 +28,7 @@
         </div> -->
     </div>
     <main>
-        <section class="seccion">
+        <section class="secciones">
             <div class="containerTitle">
                 <h2 id="aboutMe" class="sectionTitle cLight font">/diseño gráfico</h2>
             </div>
@@ -63,7 +64,12 @@
                     </div>
                 </div>
             </div>
-    </section>  
+        </section>
+    <section class="secciones bgLight cDark">
+        <div class="imgBoxProyectos bgDark">
+            <a href="https://github.com/VicenteAparicio/retroConsole" target="_blank"><img class="imgProyectos" src="./img/consola.jpg" alt="Consola Retro" title="Consola retro hecha en html, css y con algunas funcionalidades en JavaScript"></a>
+        </div>
+    </section>
     </main>
     
     <script src="https://kit.fontawesome.com/ac47b89bc3.js" crossorigin="anonymous"></script>
