Arreglados fallos en la muestra de las fotos y en su colocación para el diseño responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <span class="hide font cLight">portfolio</span>
         </div> -->
     </div>
-    <main>
+
         <section class="secciones">
             <div class="containerTitle">
                 <h2 id="aboutMe" class="sectionTitle cLight font">/diseño gráfico</h2>
@@ -65,12 +65,14 @@
                 </div>
             </div>
         </section>
-    <section class="secciones bgLight cDark">
-        <div class="imgBoxProyectos bgDark">
-            <a href="https://github.com/VicenteAparicio/retroConsole" target="_blank"><img class="imgProyectos" src="./img/consola.jpg" alt="Consola Retro" title="Consola retro hecha en html, css y con algunas funcionalidades en JavaScript"></a>
-        </div>
-    </section>
-    </main>
+        <section id="cajaProyectos" class="secciones bgLight cDark">
+            <div class="imgBoxProyectos">
+                <a href="https://github.com/VicenteAparicio/retroConsole" target="_blank">
+                    <img class="imgProyectos" src="./img/consola.jpg" alt="Consola Retro" title="Consola retro hecha en html, css y con algunas funcionalidades en JavaScript">
+                </a>
+            </div>
+        </section>
+
     
     <script src="https://kit.fontawesome.com/ac47b89bc3.js" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
